secret-manager-usage/tests/fails/invalid_json.stderr
error: could not parse the secret value as JSON
 --> tests/fails/invalid_json.rs:4:8
  |
4 | struct InvalidSecret {}
  |        ^^^^^^^^^^^^^
